refactoring: from snake case to camel case for serve price
