# internal/schemas/teaSchemas/response.go
@@ -8,8 +8,8 @@ import (
 type ResponseModel struct {
 	Id          uuid.UUID    `json:"id"`
 	Name        string       `json:"name"`
-	ServePrice  float64      `json:"serve_price"`
-	WeightPrice float64      `json:"weight_price"`
+	ServePrice  float64      `json:"servePrice"`
+	WeightPrice float64      `json:"weightPrice"`
 	Description *string      `json:"description"`
 	CategoryId  uuid.UUID    `json:"categoryId"`
 	Tags        []entity.Tag `json:"tags,omitempty"`
